# fabsim

./: CMakeLists.txt
.github/workflows/: build.yml  windows-build.yml
app/: main.cpp
cmake/: fabsim.cmake
gui/: CMakeLists.txt  gui.cpp  main.cpp  viewer.cpp  viewer.h
include/fsim/: math.hpp
src/: CMakeLists.txt  main.cpp
src/app/: tinyfiledialogs.h
src/util/: math.cpp
viewer/: CMakeLists.txt  Viewer.cpp  Viewer.h
viewer/shaders/: simple.frag  simple.vert
